--- a/aboutUs.html
+++ b/aboutUs.html
@@ -19,7 +19,7 @@
     <div class="wrapper container">
         <nav class="navbar navbar-expand-lg row">
             <a class="navbar-brand col-xs-2" href="index.html">
-                <img width="270px" height="100px" class="img-responsive" src="resources/images/logos/logomd.png" alt="Moldcell">
+                <img width="270px" height="100px" class="img-responsive" src="resources/images/logos/logomd.png" alt="President">
             </a>
 
             <nav class="two">
@@ -47,7 +47,7 @@
 <div class="container" style="background-color: #e8daf1;">
     <div class="row">
         <div class="col-md-12">
-            <div class="article" ng-copy="count = count + 1" ng-init="count=374">
+            <div class="article" ng-copy="count = count + 1" ng-init="count=1">
 
                 <h2 style="text-align: center;">
                     <div class="content-head">
